crates/vue_oxc_toolkit/src/parser/snapshots/vue_oxc_toolkit__parser__parse__tests__error_interpolation_vue.snap
---
source: crates/vue_oxc_toolkit/src/parser/parse.rs
expression: result
---
Program: Program {
    span: Span {
        start: 0,
        end: 0,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    scope_id: Cell {
        value: None,
    },
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
    },
}
Errors: [
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Interpolation end sign was not found.",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                95,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Element is missing end tag.",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                13,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Element is missing end tag.",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]
JS:
